--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
       <input type="password" id="password" />
 
       <button id="login-button">login</button>
+      <button id="register-button">register</button>
     </div>
 
     <div id="task-container">
